# langserve-cdk-ecs

./: .env.local.sample  .env.sample  README.MD  docker-compose.yml  package-lock.json
cdk/: app.py  cdk.context.json  requirements.txt
cdk/cdk/: langserve_stack.py
cdk/tests/unit/: test_cdk_stack.py
chatbot/: Dockerfile  pyproject.toml
chatbot/app/: monkey_patch.py  server.py
chatbot/app/agents/: website_bot.py
chatbot/app/tools/: rag.py
