[tool.poetry]
name = "chatbot"
version = "0.1.0"
description = ""
authors = ["prince-smiles <prince@doc32.in>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
langchain = "^0.2.6"
langchain-openai = "^0.1.11"
langchain-mongodb = "^0.1.6"
pymongo = "^4.8.0"
langchain-core = "^0.2.10"
pydantic = "^2.7.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
